@@ -1,3 +1,8 @@
+Sat May 19 14:42:37 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/drb/drbtest.rb ({DRbCore,DRbAry}#teardown}: cannot pass SIGTERM
+	  to another process on Windows, so use SIGINT instead.
+
 Sat May 19 14:42:20 2012  Tanaka Akira  <akr@fsij.org>
 
 	* lib/drb/ssl.rb: generate 1024 bits RSA key instead of 512 bits.
